Removed social floater. Changed Personal website Image. Fixed sizing issue on mobile devices.

--- a/src/containers/Home/Home.css
+++ b/src/containers/Home/Home.css
@@ -14,7 +14,7 @@
 .fullname {
   text-transform: capitalize !important;
   font-family: 'Hammersmith One', sans-serif;
-  font-size: 70px;
+  font-size: 4em;
   color: #333333;
   font-weight: bolder;
   margin: 0;
