--- a/src/containers/Projects/Projects.css
+++ b/src/containers/Projects/Projects.css
@@ -20,7 +20,7 @@
 
 .projects-container {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(340px, 1fr));
   gap: 1em 1rem;
 }
 
@@ -45,7 +45,6 @@
 }
 
 .project-data {
-  width: 100%;
   transition: all ease-in-out 0.3s;
   background: rgba(0, 0, 0, 0.55);
   height: 100%;
